# pykm

./: .gitignore  AnimeDL.py  Pipfile  README.md  bingImages.py  bingImagesPythonista.py  camera.py  everyone.py  gaze.txt  gazePrediction.ipynb  gazePrediction.py  gitpull.py  nlp.py  password.py  timer.py  tracking.py
drawImg/: card.py
drawImg/env/: pip-selfcheck.json
flask/env/: pip-selfcheck.json
flask/test/: app.py  bb_tai
goodreads/: .env  .envrc  pyproject.toml
goodreads/api/: models.py  serializers.py  views.py
goodreads/api/migrations/: 0001_initial.py
goodreads/app/: serializers.py  views.py
goodreads/app/migrations/: 0001_initial.py  0002_auto_20210109_1226.py  0003_auto_20210109_1333.py
goodreads/goodreads/: settings.py  urls.py
test/: 1.py  google.csv  members.txt
